testsuite/tests/properties/invalid_then/test.out
== default_no_kw.lkt ==
default_no_kw.lkt:6:47: error: at most 1 positional argument(s) expected, got 2
6 |     fun prop(): Name = node.name.do((x) => x, node)
  |                                               ^^^^


== invalid_kwarg.lkt ==
invalid_kwarg.lkt:6:47: error: unknown argument
6 |     fun prop(): Name = node.name.do((x) => x, value=node)
  |                                               ^^^^^


== lambda_no_arg.lkt ==
lambda_no_arg.lkt:6:38: error: at least 1 arguments expected
6 |     fun prop(): Name = node.name.do(() => node)


== no_lambda.lkt ==
no_lambda.lkt:6:37: error: lambda expression expected
6 |     fun prop(): Name = node.name.do(node)
  |                                     ^^^^


== too_many_args.lkt ==
too_many_args.lkt:6:47: error: at most 1 positional argument(s) expected, got 2
6 |     fun prop(): Name = node.name.do((x) => x, node, default_val=node)
  |                                               ^^^^


== two_args.lkt ==
two_args.lkt:6:38: error: at most 1 arguments expected
6 |     fun prop(): Name = node.name.do((x, y) => x.foo(y))
  |                                      ^^^^


lkt_compile: Done
